_assets/stylesheets/base.scss
$color2: #444444;
$color1: #dc0067;
$header-bg: #444444;
$menu-bg: #ffb400;

.lang_select{
	float: right;
	right: 5px;
	position: absolute;
	a, a:visited{
		color: $color1;
		font-weight: normal;
	}
}

h1, h2, h3, h4, body {
	font-family: sans-serif;
	color: #000000;
}
h3 {
	margin-bottom: 0.4em;
}
p {
	margin-top: 0;
	margin-bottom: 0.8em;
}
body {
	background-color: #eeeeee;
	padding-bottom: 30px;
}

h2 {
	background-color: $header-bg;
	color: #ffffff;
	padding: 10px 20px;
	margin-bottom: 0;
	font-size: 22px;
}

.anchor {
	display: block;
//	height: 250px;
//	margin-top: -250px;
	visibility: hidden;
}

.navbar {
	margin-bottom: 0;
}

.row {
	overflow: hidden;
	fieldset {
		padding: 10px 0 0;
		border-width: 1px 0;
		.btn {
			background-color: #FFB400;
			color: #333333;
			&:hover {
				background-color: #DC0067;
				color: #ffffff;
			}
		}
	}
}

header {
	border-bottom: 5px solid $color1;
}

.title,
.menubar .row,
.main .wrap {
    margin: auto;
    max-width: 1200px;
    width: 70%;
	overflow: hidden;
	clear: both;
	@media only screen and (max-width: 400px) {
	    width: 98%;
	}
}

#pagetop {
	width: 100%;
	background-color: #eeeeee;
	h1 {
		color: #333333;
		padding-left: 190px;
		padding-top: 30px;
	}
	#logo {
		float: left;
	}
	@media only screen and (min-width: 768px) {
		height: 230px;
//		position: fixed;
		header {
//			bottom: 0;
//			position: absolute;
		    width: 100%;
		}
	}
	.title {
		div {
			margin: 10px 0;
			@media only screen and (max-width: 767px) {
				display: none;
			}
		}
	}

	.menubar {
		background-color: $menu-bg;
		ul li {
			margin: 0;
		}
		a {
			border-right: 1px solid #ffffff;
			display: block;
			color: #333333;
			display: block;
			padding: 10px 15px;
			margin: 0 auto;
			cursor: pointer;
			text-align: center;
			@media only screen and (min-width: 1168px) {
					font-size: 105%;
					font-weight: bold;
					width: 110px;
					padding: 10px 0;
			}
		}
	
		@media only screen and (max-width: 767px) {
			width: 100%;
			#navrow {
				display: none;
				.navbar-left {
					display: none;
				}
			}
			#menu-toggle:checked + #navrow {
				display: block;
			}
		}
		ul li a:hover,
		ul li a.active {
			color: #ffffff;
			background-color: $color1;
		}
		li:first-child a {
			border-left: 1px solid #ffffff;
		}
		@media only screen and (max-width: 767px) {
			li:first-child a,
			li a {
				border-width: 0;
			}
			li {
				border-bottom: 1px solid #ffffff;
			}
			nav:last-child li:last-child {
				border: 0;
			}
		}
	}
}


.button-mobile {
	label {
		position: relative;
		top: 4px;
		cursor: pointer;
	}
	float:right;
	margin-right: 5px;
	@media only screen and (min-width: 768px) {
		display: none;
	}
}

#title-small {
	color: #333333;
	font-size: 28px;
	position: fixed;
	height: 0;
	width: 100%;
	top: 0;
	background-color: #eeeeee;
	.row #inner-small {
		position: absolute;
		-webkit-transition: all 0.5s ease-in-out;
		moz-transition: all 0.5s ease-in-out;
		-o-transition: all 0.5s ease-in-out;
		transition: all 0.5s ease-in-out;
		top: -60px;
	}
	overflow: hidden;
	.row {
		height: 50px;
		position: relative;
	}
	#inner-small {
		width: 100%;
	}
	#text-small {
		position: relative;
		bottom: 10px;
	}
}

.is-sticky #title-small {
	height: 50px;
	display: block;
	.row #inner-small {
		top: 0;
	}
}
.main {
	padding-top: 20px;
	padding-bottom: 40%;
	.wrap {
		margin-bottom: 30px;
	}
	.row {
		background-color: #ffffff;
		padding: 20px;
		border:  1px dotted $color1;
		border-top: 0;
		border-bottom: 5px solid $color1;
	}
	img.right {
		margin: 0 0 10px 10px;
	}
	img.left {
		margin: 0 10px 10px 0;
	}
	@media only screen and (min-width: 768px) {
		padding-top: 20px;
	}
	@media only screen and (max-width: 767px) {
		padding-top: 60px;
		img.left,
		img.right {
			margin: 0 auto;
			display: block;
		}
	}
}

